--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
+    "@unform/core": "^2.1.3",
+    "@unform/mobile": "^2.1.3",
+    "axios": "^0.21.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -32,7 +35,8 @@
     "react-native-unimodules": "~0.11.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "yup": "^0.32.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -40,6 +44,7 @@
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
+    "@types/yup": "^0.29.10",
     "babel-preset-expo": "~8.3.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^7.0.0",
